@@ -1,3 +1,8 @@
+2000-08-23  Jeff Hobbs  <hobbs@scriptics.com>
+
+	* generic/tkButton.c (ButtonTextVarProc): reversed change below,
+	it was not correct.
+
 2000-08-22  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* generic/tkButton.c (ButtonTextVarProc): changed order of
